# raytracer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  clang-format.sh  clang-tidy.sh  meson.build  meson_options.txt  raytrace.code-workspace  raytracer.project  raytracer.workspace  style.cpp  style.h  styple.h
doc/: CMakeLists.txt  Doxyfile.in
dump/: dump.h
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: camera.h  clang-format.sh  clang-tidy.sh  config.h.in  disabled_main.cpp  hitable.h  main.cpp  material.h  ray.h  raytracer.cpp  raytracer.h  raytracer.hpp  raytracerapp.cpp  raytracerapp.h  raytracerapp.hpp  sphere.h  vec3.h
src/base/: base.h
src/camera/: camera.h  camera.hpp
src/materials/: material.h  material.hpp
src/objects/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  hitable.cpp  hitable.h  hitable_list.h  moving_sphere.cpp  moving_sphere.h  sphere.cpp  sphere.h  sphere.hpp
src/ray_engine/: hitable_list.h  ray.hpp  sector.hpp
src/rendering/: hitable.cpp  hitable.h  hitable.hpp  hitable_list.h  hitable_list.hpp  ray.h  ray.hpp  raytracer.cpp  raytracer.h  raytracer.hpp  sector.h  sector.hpp
src/scene/: scene.h  scene.hpp
src/system/: file.cpp  file.h  file.hpp  system.cpp  system.h  system.hpp
src/system/window/: Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Vulkan.cpp  Vulkan.h  vk_core.cpp  vk_core.h  window.cpp  window.h
src/types/: node.h  node.hpp  pixel.h  types.h  types.hpp  vec2.h  vec2.hpp  vec3.h
subprojects/: nlohmann_json.wrap
tools/: build_number.sh
